<resources>
    <string name="app_name">Food Master</string>
    <string name="logo">logo</string>
    <string name="icon">icon</string>
    <string name="food">Food</string>
    <string name="master">Master</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="slg">It\'s a pleasure to meet you. We are excited that you\'re here so let\'s get started!</string>
    <string name="slg1">Find the best local restaurants with delicious meal</string>
    <string name="slg2">Choose your foods</string>
    <string name="slg3"><![CDATA[Easily find your type of food craving and you will get at Restaurant]]></string>
    <string name="fm">Welcome to Food Master</string>
    <string name="lg">Login with Google</string>
    <string name="p">Profile</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="logout">Logout</string>
    <string name="sh">Search Hotel</string>
</resources>