<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="-50dp"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="#FBE9E7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/p"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/avatar"
        android:contentDescription="@string/todo" />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardBackgroundColor="#FFF9C4"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="270dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:id="@+id/username"
            android:text="@string/name">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/usermail"
            android:text="@string/mail">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="9420923645">

        </TextView>
    </LinearLayout>
</androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/logout"
        android:layout_marginTop="660dp">
    </Button>


</RelativeLayout>