<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/icon">
                </ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/food">
                    </TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/master">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/food1">
    </ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:text="All your favorites">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:text="@string/slg1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="20sp">
    </TextView>

    <Button
        android:id="@+id/nextpage1"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="650dp"
        android:backgroundTint="#EEA734"
        android:text="Next">
    </Button>
</RelativeLayout>